Fixed size input on small recolution

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,10 @@
     .search-input{
         @apply bg-gray-800 text-purple-500
         border-2 border-purple-500
-        h-8 min-w-8 font-bold;
+        w-24
+        sm:w-36
+        md:w-56
+        h-8 min-w-4 font-bold;
     }
     .search-button{ 
         @apply dropdown-button
@@ -58,8 +61,8 @@
     }
     .dropdown-list{
         @apply absolute -m-0 ml-4 flex 
-            max-w-5
-            md:max-w-full
+            /* max-w-5
+            md:max-w-full */
             rounded-lg rounded-t-none
             overflow-hidden 
             bg-gray-900 border-2 border-purple-500;
